force-app/main/default/objects/sked__Job_Dependency__c/sked__Job_Dependency__c.object-meta.xml
<CustomObject>
    <label>Job Dependency</label>
    <nameField>
        <displayFormat>JD-{00000}</displayFormat>
        <label>Job Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Dependencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>