force-app/main/default/objects/sked__Job_Dependency__c/fields/sked__From_Job__c.field-meta.xml
<CustomField>
    <fullName>sked__From_Job__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>From Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Job Dependencies From</relationshipLabel>
    <relationshipName>Job_Dependencies_From</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>