force-app/main/default/objects/sked__Job_Dependency__c/fields/sked__To_Job__c.field-meta.xml
<CustomField>
    <fullName>sked__To_Job__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>To Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Job Dependencies To</relationshipLabel>
    <relationshipName>Job_Dependencies_To</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>