force-app/main/default/objects/sked__Job_Dependency__c/validationRules/sked__FromJob_and_ToJob_different.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__FromJob_and_ToJob_different</fullName>
    <active>true</active>
    <description>FromJob and ToJob must reference two different jobs.</description>
    <errorConditionFormula>sked__From_Job__r.Id  = sked__To_Job__r.Id</errorConditionFormula>
    <errorMessage>FromJob and ToJob must reference two different jobs.</errorMessage>
</ValidationRule>